@@ -1,6 +1,6 @@
 phylo_cnv/example/ex1/
 lib_bak/
-*/*.pyc
+**/*.pyc
 scripts2/
 phylo_db/
 phylo_db.tar.gz
